Fix dashboard overflow

--- a/client/src/components/Dashboard.module.css
+++ b/client/src/components/Dashboard.module.css
@@ -15,6 +15,11 @@
   height: 12rem;
   width: 12rem;
   margin: 0.375rem;
+  cursor: pointer;
+}
+
+.card:hover {
+  background-color: #eee;
 }
 
 .card_top {
@@ -26,9 +31,16 @@
   padding: 1em;
 }
 
+.card_top__company {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .card_top__jobtitle {
   color: #444;
   margin: 0.5rem 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card_bottom {
